# ipc

./: .gitignore  README.md
ipc_manage/: main.py
ipc_manage/lib/: acdb.py
ipc_test/: Cargo.toml
ipc_test/.cargo/: config.toml
ipc_test/src/: ipc_test.rs  ipc_test_with_exec.rs  ipc_test_with_spawn.rs
