[package]
name = "ipc_test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ipc_test_with_exec"
path = "src/ipc_test_with_exec.rs"

[[bin]]
name = "ipc_test_with_spawn"
path = "src/ipc_test_with_spawn.rs"

[[bin]]
name = "ipc_test"
path = "src/ipc_test.rs"

[dependencies]
ckb-std = { version = "0.17", default-features = false, features = ["allocator", "ckb-types", "dummy-atomic"] }
ckb-script-ipc = { git = "https://github.com/libraries/ckb-script-ipc", branch = "ipc" }
ckb-script-ipc-common = { git = "https://github.com/libraries/ckb-script-ipc", branch = "ipc" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[profile.release]
strip = true
codegen-units = 1
